[project]
name = "streetview"
version = "0.1.0"
description = "Street view data processing"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "pillow",
    "pydantic>=2.0",
    "httpx",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-vcr",
    "pytest-asyncio",
    "isort",
    "black",
    "flake8",
    "mypy",
    "types-requests",
    "types-Pillow",
    "build",
    "twine",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
